# illust-ai

./: .gitignore  .pre-commit-config.yaml  README.md  amplify.yml  buildspec.yml
asb-backend/: build.gradle.kts  settings.gradle.kts
asb-backend/db/: docker-compose.yml  launch.sh
asb-backend/debug-scripts/: launch.py
asb-backend/nginx/: nginx.conf
asb-frontend/: .env  .env.example  .gitignore  README.md  package-lock.json  package.json
asb-frontend/messages/: de.json  en.json  fil.json  fr.json  id.json  ja.json  ko.json  ms.json  pt.json  th.json  vi.json  zh-Hans.json  zh-Hant.json
asb-frontend/openapi-typescript/: postTransform.js
asb/asb-backend/: build.gradle.kts
asb/asb-frontend/: .env.example  .env.test  .gitignore  package-lock.json  package.json
aws/codedeploy/: appspec.yml
aws/ec2/: curl.sh  deploy.sh  deploy_node.sh  get_log.sh  ssh.sh
cfa-backend/: build.gradle.kts  settings.gradle.kts
cfa-backend/comfyui-worker/: pyproject.toml  worker.py
cfa-backend/db/: docker-compose.yml
cfa-backend/nginx/: nginx.conf
cfa-backend/node-scripts/: package.json
cfa-frontend/: .env  .env.example  package-lock.json  package.json  postcss.config.mjs
cfa-frontend/openapi-typescript/: postTransform.js
codedeploy/: appspec.yml
codedeploy/scripts/: start_application.sh  stop_application.sh
ila-backend/: .gitignore  build.gradle.kts  settings.gradle.kts
ila-backend/db/: launch.sh
ila-frontend/: .env  .env.example  package-lock.json  package.json
uag-backend/: .gitignore  build.gradle.kts  settings.gradle.kts
uag-frontend/: package.json
(+902 files in other folders)
